// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentImage component renders correctly 1`] = `
<ImageLoader
  src="http://images/test.png"
>
  <img
    alt="Image alt text"
    className="content-image"
    title=""
  />
  <div
    className="content-image-placeholder color-alt"
  >
    <span>
      Image unavailable
    </span>
  </div>
  <ImageLoading
    className="content-image-placeholder"
  />
</ImageLoader>
`;

exports[`ContentImage component renders correctly with title specified 1`] = `
<ImageLoader
  src="http://images/test.png"
>
  <img
    alt="Image alt text"
    className="content-image"
    title="Image title"
  />
  <div
    className="content-image-placeholder color-alt"
  >
    <span>
      Image unavailable
    </span>
  </div>
  <ImageLoading
    className="content-image-placeholder"
  />
</ImageLoader>
`;
